2007-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (C-transient, C-parent): ensure we unset parent
	transient and group when not both are set.

2007-01-30  Andreas Kupries  <andreask@activestate.com>

	* toolbar.tcl (itemidentify): New method, converting symbolic
	  button names to their actual widget path.	
	* toolbar.tcl (items): Simplified the code.

2007-01-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl (_set_scroll): move loop lock detection to include
	removal of scrollbar

2006-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (PlaceWindow): handle unmapped anchor

2006-11-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (PlaceWindow): always raise after deiconify

2006-11-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* ruler.tcl: add screenruler menu bindings and underlines

2006-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (display): init lastFocusGrab properly
	don't restore focus/grab if we weren't mapped

2006-11-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl: add -focus option to set desired subwindow focus,
	and make sure we don't restore focus/grab to a subwindow on withdraw

2006-10-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (display): don't tkwait, as it will just hang for an
	already displayed window (a Tk misfeature ... but oh well).

2006-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl: handle -separator changed with option default

2006-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (withdraw): fix grab handling to properly release

2006-09-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl: fix error gridding scrollbar from 2006-09-25 change
	to handle the variant options for vsb vs. hsb correctly.

2006-09-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* toolbar.tcl (add): separator item should have no pady by default
	(add): add label and radiobutton item support

2006-09-25  Jeff Hobbs  <jeffh@ActiveState.com>
