@@ -1,3 +1,10 @@
+2007-04-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* scrollw.tcl: cancel pending timer in case we are destroyed
+
+	* mentry.tcl (::widget::createMenuEntryLayout): handle variant
+	style cmd usage for 8.4 and 8.5+.
+
 2007-03-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* dialog.tcl (C-transient, C-parent): ensure we unset parent
